--- a/main.css
+++ b/main.css
@@ -42,6 +42,7 @@ td {
     font-size: 24px;
     padding: 5px;
     padding-bottom: 10px;
+    
 }
 
 .opis {
@@ -58,8 +59,16 @@ h2 {
 }
 
 .yellow {
-    background-color: yellow;
-    color: black;
     font-size: 50px;
     margin-bottom: 10px;
+}
+
+.name {
+    border-left: 4px solid yellow;
+    
+}
+
+img {
+    margin: 10px;
+    width: 110px;
 }
