--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 html {
     background-color: black;
-    background-image: url(img/menu.jpg);
+    background-image: url(img/menu_ended.jpg);
     background-repeat: repeat;
     background-size: cover;
     background-position: top;
