--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 html {
+    background-color: black;
     background-image: url(img/menu_ended.jpg);
     background-repeat: repeat;
     background-size: cover;
